fixed the issue where connect menu was hidden on mobile menu

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
@@ -976,6 +976,10 @@ textarea, input { outline: none !important; }
 	display: none;
 }
 
+.side-2 .mobile-main-menu .block-other-links {
+	display: block;
+}
+
 .mobile-menu-body .block-other-links {
 	margin-bottom: 10px;
 }
